fixed intro page header spacing

--- a/assets/css/_sass/_theme.scss
+++ b/assets/css/_sass/_theme.scss
@@ -49,3 +49,7 @@ h3,h4,h5 {
         border-left: $primary-color 20px solid;    
     }
 }
+
+.page-header {
+    padding-top: 14rem;
+}
